--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-gi
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>instagram</title>
+  </head>
+  <body>
+    <div>
+      <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png" alt="logo" />
+    <input type="search" value="검색">
+    </div>
+    <div>
+      <img src="image/profile.png" alt="" width="50px" />
+      <div>
+        <h2>half_bottle</h2>
+        <button>프로필 편집</button>
+      </div>
+    </div>
+    <div>
+      <p><strong>반병현 (Byunghyun Ban)</strong></p>
+      <p>저자</p>
+      <p><a href="https://needleworm.github.io">needleworm.github.io</a></p>
+    </div>
+    <div>
+      <div><img src="image/hl1.jpeg" alt="" height="35px" /></div>
+      <div>☁️</div>
+      <div><img src="image/hl2.jpeg" alt="" height="35px" /></div>
+      <div>🌿</div>
+    </div>
+    <div>
+      <div>게시물<br />133</div>
+      <div>팔로워<br />408</div>
+      <div>팔로우<br />189</div>
+    </div>
+    <div>아이콘이 들어갈 자리</div>
+    <div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+      <div><img src="image/1.jpeg" alt="" width="32%" /></div>
+    </div>
+  </body>
+</html>
